@@ -1,3 +1,8 @@
+2008-05-29  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/dateentry.py:
+	Improve documentation a bit
+
 2008-04-17  Ronaldo Maia  <romaia@async.com.br>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
